--- a/src/test/resources/conf/Configuration.properties
+++ b/src/test/resources/conf/Configuration.properties
@@ -13,3 +13,5 @@ myapplication=file:///C:/Users/onlym/Downloads/TEch.html
 awsUrl=https://calculator.s3.amazonaws.com/index.html
 
 HRApplicationUrl=file:///C:/Users/onlym/Downloads/Project.html
+
+Test=test
